# notion

./: .gitignore  Cargo.toml
examples/todo/: main.rs
examples/todo/commands/: configure.rs
src/: lib.rs  query.rs
src/models/: block.rs  mod.rs  paging.rs  properties.rs  property_schema.rs  search.rs  tests.rs  text.rs  users.rs
src/models/tests/: page.json  query_result.json  rich_text_mention_database.json  rich_text_mention_page.json
