[package]
name = "notion"
version = "0.5.1"
authors = ["Jake Swenson <jake@jakeswenson.com>"]
edition = "2018"
repository = "https://github.com/jakeswenson/notion"
readme = "README.md"

description = "A Notion Api Client"
license = "MIT"

[dependencies]
itertools = "0.12.1"
monostate = "0.1"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
urlencoding = "2.1.3"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde", "clock"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
wiremock = "0.5.2"
anyhow = "1.0.40"
clap = { version = "4.0", features = ["derive"] }
skim = "0.10.2"
crossbeam-channel = "0.5"
toml = "0.8"

[dev-dependencies.config]
version = "0.14.0"
features = ["toml"]
